--- a/quizz/templates/question/base.html
+++ b/quizz/templates/question/base.html
@@ -10,7 +10,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Orbitron:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href={% static 'question/main.css' %}>
@@ -19,7 +19,7 @@
     {% block content %} {% endblock content %}
     <div>
       {% for message in messages %}
-        <p class= {{message.tags}}>{{message}}</p>
+      <p class="{{message.tags}}">{{message}}</p>
       {% endfor %}
     </div>
     <script src="{% static 'question/scripts.js' %}"></script>
